--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "xp_92@mail.ru",
   "license": "ISC",
   "dependencies": {
+    "@types/yup": "^0.29.13",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
@@ -27,7 +28,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.11",
     "pino": "^6.13.1",
-    "pino-pretty": "^6.0.0"
+    "pino-pretty": "^6.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
