added sessions routes, middlewares: deserialize, requireUser, jwt util, swagger init

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
                 "varsIgnorePattern": "[I]\\w+"
             }
         ],
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "no-underscore-dangle": "off"
     }
 }
