--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^5.12.11",
     "pino": "^6.13.1",
     "pino-pretty": "^6.0.0",
+    "swagger-ui-dist": "*",
+    "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.2",
     "@types/pino": "^6.3.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
