--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   },
   "scripts": {
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=development&& jest",
     "eslint": "eslint",
     "prettier": "prettier"
   },
   "author": "xp_92@mail.ru",
   "license": "ISC",
   "dependencies": {
-    "@types/yup": "^0.29.13",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
@@ -24,14 +23,14 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-unicorn": "^35.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.11",
     "pino": "^6.13.1",
     "pino-pretty": "^6.0.0",
-    "swagger-ui-dist": "*",
-    "swagger-ui-express": "^4.1.6",
-    "yup": "^0.32.9"
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -39,14 +38,20 @@
     "@types/config": "^0.0.39",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.2",
     "@types/pino": "^6.3.11",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-standard": "^16.0.3",
@@ -54,7 +59,10 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.1.0",
     "prettier": "2.3.2",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
