--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "xp_92@mail.ru",
   "license": "ISC",
   "dependencies": {
+    "@types/i18next": "^13.0.0",
+    "@types/i18next-express-middleware": "^1.7.0",
+    "@types/i18next-node-fs-backend": "^2.1.1",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
@@ -24,6 +27,9 @@
     "eslint-plugin-unicorn": "^35.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "i18next": "^20.6.0",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-node-fs-backend": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.11",
